FlightPath 7.x Changelog
========================

2024-10-04
  Modified Engagements display so that engagements are sorted by activity_datetime desc FIRST, then by vid DESC.  Otherwise, this
  caused a bug where the most recently modified was appearing first.
  
  Modified Engagements display so that emails show their subject line.

  Fixed a bug in content module, where titles were being passed through filter_markup, and consequently having <p></p> added to
  them.
  

2024-09-30
  Fixing bug when receiving SMS, where it wasn't sending full contents of SMS to non-advisor users, if set.
  
  Made a non-breaking change to modules_implement_hook() function, so we can specified modules to skip when
  checking to see which ones implement a hook.
  
  Made changes to the order in which content is loaded and saved, to make sure content is fully created before
  being passed to a hook.
  
  Added alerts_content_load() hook to alerts module, so if there are attached media we will show them in the
  alert, similar to email and text messages.


2024-09-19
  Added server hostname to the PHP mail errors email.
    
  Cleaning up some code in the batch module.
  

2024-09-05
  Created a convenience function and added it to misc.inc: array_get().  This lets you get a value from an array (if it exists), or,
  if it does not exist, you get back an empty string ("") or whatever you specify.  
  This is helpful for the common PHP warning in PHP 8 of an "undefined array key".  My intention is to slowly replace the $x = @$arr['something'] type
  statements with $x = array_get($arr, 'something') over time.  All those @'s are ugly.
  
  Modified cron.php to make it slightly more secure in how it checks for the cron token. 
  

2024-09-04
  Various tweaks for PHP 8.
  
  Added option in Engagements - SMS Settings, to allow the full contents of an SMS message to be sent to specified recipients, instead of a simple
  notification that they should log in to view.
  